[metadata]
# replace with your username:
name = music-theory
version = 0.0.1
author = Dave Grant
author_email = david@grant.org.uk
description = Exploring music theory in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seize-the-dave/music-theory
project_urls =
    Bug Tracker = https://github.com/seize-the-dave/music-theory/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src